--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "cnpm": "^5.3.0",
+    "element-ui": "^2.7.2",
     "node-webkit-updater": "^0.3.3",
     "node-xlsx": "^0.11.2",
     "nw": "0.14.7-sdk",
